--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-# Except some files!Case_1_parameters.xlsx
-# !Case_1_parameters.xlsx
-# !Case_2_parameters.xlsx
-# !Case_3_parameters.xlsx
-# !Case_4_parameters.xlsx
-# !Case_5_parameters.xlsx
+# Except some files
+*Case_1_parameters.xlsx
+*Case_2_parameters.xlsx
+*Case_3_parameters.xlsx
+*Case_4_parameters.xlsx
+*Case_5_parameters.xlsx
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
